# rusted-katana

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check.sh  count.fish  count.sh  lint.fish  lint.sh  rustfmt.toml
.config/: nextest.toml
1kyu/tiny-three-pass-compiler/: Cargo.toml
2kyu/algebraic-isomorphism/: Cargo.toml
2kyu/can-you-control-the-lights/: Cargo.toml
3kyu/closest-pair-of-points-in-linearithmic-time/: Cargo.toml
3kyu/last-digit-of-a-huge-number/: Cargo.toml
4kyu/count-ones-in-a-segment/: Cargo.toml
4kyu/spinning-rings-fidget-spinner-edition/: Cargo.toml
4kyu/sum-of-intervals/: Cargo.toml
4kyu/the-fusc-function-part-2/: Cargo.toml
5kyu/last-digit-of-a-large-number/: Cargo.toml
5kyu/light-switch/: Cargo.toml
5kyu/paginating-a-huge-book/: Cargo.toml
5kyu/program-a-calculator-number-2-3d-vectors/: Cargo.toml
5kyu/resistor-color-codes-part-2/: Cargo.toml
5kyu/where-my-anagrams-at/: Cargo.toml
6kyu/1-slash-n-cycle/: Cargo.toml
6kyu/1rm-calculator/: Cargo.toml
6kyu/RoboScript #1 - Implement Syntax Highlighting/: Cargo.toml
6kyu/a-disguised-sequence-i/: Cargo.toml
6kyu/a-floating-point-system/: Cargo.toml
6kyu/a-rule-of-divisibility-by-13/: Cargo.toml
6kyu/address-book-by-state/: Cargo.toml
6kyu/adjacent-repeated-words-in-a-string/: Cargo.toml
6kyu/all-star-code-challenge-number-15/: Cargo.toml
6kyu/all-star-code-challenge-number-15-text-scrolling-machine/: Cargo.toml
6kyu/an-osha-approved-ladder/: Cargo.toml
6kyu/anagram-difference/: Cargo.toml
6kyu/approximate-solution-of-differential-equation-with-runge-kutta-4/: Cargo.toml
6kyu/are-they-the-same/: Cargo.toml
6kyu/array-dot-diff/: Cargo.toml
6kyu/ascend-descend-repeat/: Cargo.toml
6kyu/ascii-fun-number-1-x-shape/: Cargo.toml
6kyu/ascii-fun-number-2-funny-dots/: Cargo.toml
6kyu/back-and-forth-then-reverse/: Cargo.toml
6kyu/backspaces-in-string/: Cargo.toml
6kyu/backwards-read-primes/: Cargo.toml
6kyu/ball-upwards/: Cargo.toml
6kyu/basics-08-find-next-higher-number-with-same-bits-1-s/: Cargo.toml
6kyu/basics-09-shifting-bits-right-dot-dot-dot/: Cargo.toml
6kyu/binaries/: Cargo.toml
6kyu/bishop-movement-checker/: Cargo.toml
6kyu/bit-counting/: Cargo.toml
6kyu/block-letter-printer/: Cargo.toml
6kyu/block-pusher/: Cargo.toml
6kyu/bouncing-balls/: Cargo.toml
6kyu/braking-well/: Cargo.toml
6kyu/break-camelcase/: Cargo.toml
6kyu/build-a-pile-of-cubes/: Cargo.toml
6kyu/build-tower/: Cargo.toml
6kyu/build-tower-advanced/: Cargo.toml
6kyu/buying-a-car/: Cargo.toml
6kyu/cafeteria/: Cargo.toml
6kyu/calculate-pyramid-height/: Cargo.toml
6kyu/calculate-string-rotation/: Cargo.toml
6kyu/camelcase-method/: Cargo.toml
6kyu/cancer-cells/: Cargo.toml
6kyu/car-number-plate-calculator/: Cargo.toml
6kyu/casino-chips/: Cargo.toml
6kyu/catalog/: Cargo.toml
6kyu/character-frequency-1/: Cargo.toml
6kyu/character-with-longest-consecutive-repetition/: Cargo.toml
6kyu/chasers-schedule/: Cargo.toml
6kyu/checkerboard-resolution/: Cargo.toml
6kyu/chmod-calculator-in-octal/: Cargo.toml
6kyu/closed-brackets-string/: Cargo.toml
6kyu/collatz/: Cargo.toml
6kyu/color-choice/: Cargo.toml
6kyu/compare-versions/: Cargo.toml
6kyu/complete-the-matrix-pattern/: Cargo.toml
6kyu/consecutive-strings/: Cargo.toml
6kyu/convert-integer-to-float-while-rounding-up-and-down/: Cargo.toml
6kyu/convert-string-to-camel-case/: Cargo.toml
6kyu/coprimes-up-to-n/: Cargo.toml
6kyu/corner-circle/: Cargo.toml
6kyu/count-a-spiral/: Cargo.toml
6kyu/count-characters-in-your-string/: Cargo.toml
6kyu/count-the-photos/: Cargo.toml
6kyu/counting-ascii-art-squares/: Cargo.toml
6kyu/counting-duplicates/: Cargo.toml
6kyu/counting-rectangle-triangles/: Cargo.toml
6kyu/crack-the-pin/: Cargo.toml
6kyu/create-phone-number/: Cargo.toml
6kyu/custom-fizzbuzz-array/: Cargo.toml
6kyu/dashatize-it/: Cargo.toml
6kyu/dead-ants/: Cargo.toml
6kyu/decompose-a-number/: Cargo.toml
6kyu/delete-occurrences-of-an-element-if-it-occurs-more-than-n-times/: Cargo.toml
6kyu/delta-generators/: Cargo.toml
6kyu/gangs/: Cargo.toml
6kyu/gangs/benches/: bench.rs  results.json
6kyu/gangs/src/: lib.rs
6kyu/simple-frequency-sort/: Cargo.toml
6kyu/simple-frequency-sort/benches/: bench.rs  results.json
6kyu/simple-frequency-sort/src/: lib.rs
6kyu/simple-substitution-cipher-helper/: Cargo.toml
6kyu/simple-substitution-cipher-helper/benches/: bench.rs  results.json
6kyu/simple-substitution-cipher-helper/src/: lib.rs
6kyu/tracking-sums-in-a-process/: Cargo.toml
6kyu/tracking-sums-in-a-process/benches/: bench.rs  results.json
6kyu/tracking-sums-in-a-process/src/: lib.rs
6kyu/unique-strings/: Cargo.toml
6kyu/unique-strings/benches/: bench.rs  results.json
6kyu/unique-strings/src/: lib.rs
6kyu/unique-strings/tests/: test.rs
7kyu/frequency-sequence/: Cargo.toml
7kyu/frequency-sequence/benches/: bench.rs  results.json
7kyu/frequency-sequence/src/: lib.rs
7kyu/sort-rectangles-and-circles-by-area-ii/: Cargo.toml
7kyu/sort-rectangles-and-circles-by-area-ii/benches/: bench.rs  results.json
7kyu/sort-rectangles-and-circles-by-area-ii/src/: lib.rs
7kyu/unique-string-characters/: Cargo.toml
7kyu/unique-string-characters/benches/: bench.rs  results.json
7kyu/unique-string-characters/src/: lib.rs
8kyu/csv-representation-of-array/: Cargo.toml
8kyu/csv-representation-of-array/benches/: bench.rs  results.json
8kyu/csv-representation-of-array/src/: lib.rs
agg-speedups/: Cargo.toml
bench/: Cargo.toml
bench/src/: main.rs
char-to-lower/: Cargo.toml
check-katas/: Cargo.toml
digital/: Cargo.toml
digital/benches/: bench.rs
digital/src/: digit.rs  digit_count.rs  digit_sum.rs  format.rs  lib.rs  max_len_base10.rs  next_2_digits.rs  to_string.rs  write_digits.rs
digital/tests/: test.rs
my-prelude/: Cargo.toml
prelude/: Cargo.toml
prelude/src/: lib.rs
progress-bars/: Cargo.toml
progress-bars/src/: main.rs
unchecked/: Cargo.toml
unchecked-core/: Cargo.toml
vqsort/: Cargo.toml  build.rs
(+3466 files in other folders)
