[workspace]
members = [
    "1kyu/*",
    "2kyu/*",
    "3kyu/*",
    "4kyu/*",
    "5kyu/*",
    "6kyu/*",
    "7kyu/*",
    "8kyu/*",
    "char-to-lower",
    "check-katas",
    "digital",
    "progress-bars",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

cast-lossless = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cognitive-complexity = "allow"
debug-assert-with-mut-call = "allow"
default-trait-access = "allow"
float-cmp = "allow"
implicit-hasher = "allow"
manual-div-ceil = "allow"
manual-midpoint = "allow"
many-single-char-names = "allow"
maybe-infinite-iter = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
new-without-default = "allow"
range-plus-one = "allow"
return-self-not-must-use = "allow"
similar-names = "allow"
suspicious-operation-groupings = "allow"
too-many-lines = "allow"
type-complexity = "allow"
uninit-assumed-init = "allow"
uninit-vec = "allow"
unused-io-amount = "allow"
while-float = "allow"
zero-sized-map-values = "allow"
