[workspace]
members = [
    "1kyu/*",
    "2kyu/*",
    "3kyu/*",
    "4kyu/*",
    "5kyu/*",
    "6kyu/*",
    "7kyu/*",
    "8kyu/*",
    "char-to-lower",
    "check-katas",
    "digital",
    "progress-bars",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[workspace.dependencies]
# kata solutions
bytecount = "0.6.8"
char-to-lower = { path = "./char-to-lower" }
chrono = { version = "0.4.35", default-features = false, features = ["std"] }
digital = { path = "./digital" }
either = "1.9.0"
hashbrown = { version = "0.16.0", features = ["nightly"] }
heapless = "0.8.0"
libm = { version = "0.2.5", features = ["unstable"] }
num-bigint = "0.4.4"
num-complex = "0.4.4"
num-integer = "0.1.45"
num-prime = "0.4.4"
radsort = { git = "https://github.com/JakubValtar/radsort" }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rustc-hash = "2.0.0"
ryu = "1.0.15"
unchecked-std = "1.1.0"
vqsort-rs = "0.2.0"
# tests/benches
criterion = "0.5.1"
num-traits = "0.2.19"
rand_pcg = "0.3.1"
# check-katas/progress-bars
ab_glyph = "0.2.26"
image = "0.25.1"
imageproc = "0.25.0"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

cast-lossless = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cognitive-complexity = "allow"
debug-assert-with-mut-call = "allow"
default-trait-access = "allow"
float-cmp = "allow"
implicit-hasher = "allow"
manual-div-ceil = "allow"
manual-midpoint = "allow"
many-single-char-names = "allow"
maybe-infinite-iter = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
new-without-default = "allow"
range-plus-one = "allow"
return-self-not-must-use = "allow"
similar-names = "allow"
suspicious-operation-groupings = "allow"
too-many-lines = "allow"
type-complexity = "allow"
uninit-assumed-init = "allow"
uninit-vec = "allow"
unused-io-amount = "allow"
while-float = "allow"
zero-sized-map-values = "allow"
