[workspace]
members = [
    "1kyu/*",
    "2kyu/*",
    "3kyu/*",
    "4kyu/*",
    "5kyu/*",
    "6kyu/*",
    "7kyu/*",
    "8kyu/*",
    "agg-speedups",
    "bench",
    "char-to-lower",
    "check-katas",
    "digital",
    "progress-bars",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# kata solutions
bytecount = "0.6.9"
char-to-lower = { path = "./char-to-lower" }
chrono = { version = "0.4.43", default-features = false, features = ["std"] }
digital = { path = "./digital" }
either = "1.15.0"
hashbrown = { version = "0.16.1", features = ["nightly"] }
heapless = "0.9.2"
libm = { version = "0.2.16", features = ["unstable"] }
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-prime = "0.4.4"
radsort = { git = "https://github.com/JakubValtar/radsort" }
rand = { version = "0.10.0", default-features = false, features = ["std"] }
rustc-hash = "2.1.1"
ryu = "1.0.23"
unchecked-std = "1.1.1"
unroll-lite = "0.1"
vqsort-rs = "0.3.0"

# tests/benches
criterion = "0.8.2"
num-traits = "0.2.19"
rand_pcg = "0.10.1"

# check-katas/progress-bars/bench/agg-speedups
# TODO we could go faster than serde_json... for both writing and reading.
ab_glyph = "0.2.32"
html-escape = "0.2.13"
image = "0.25.9"
imageproc = "0.26.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend"] }
reqwest = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

cast-lossless = "allow"
cast-possible-truncation = "allow"
cast-possible-wrap = "allow"
cast-precision-loss = "allow"
cast-sign-loss = "allow"
cognitive-complexity = "allow"
debug-assert-with-mut-call = "allow"
default-trait-access = "allow"
float-cmp = "allow"
implicit-hasher = "allow"
manual-div-ceil = "allow"
manual-midpoint = "allow"
many-single-char-names = "allow"
maybe-infinite-iter = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
new-without-default = "allow"
range-plus-one = "allow"
return-self-not-must-use = "allow"
similar-names = "allow"
suspicious-operation-groupings = "allow"
too-many-lines = "allow"
type-complexity = "allow"
uninit-assumed-init = "allow"
uninit-vec = "allow"
unused-io-amount = "allow"
while-float = "allow"
zero-sized-map-values = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
