[package]
name = "rusted-katana-bench"
edition = { workspace = true }

[dependencies]
digital = { workspace = true }
heapless = { workspace = true }
html-escape = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
unchecked-std = { workspace = true }

[lints]
workspace = true
