[package]
name = "digital"
edition = "2021"

[features]
default = ["heapless"]

[dependencies]
heapless = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "bench"
harness = false
