[package]
name = "prelude"
version = "0.1.0"
edition = "2021"

[dependencies.heapless]
version = "0.7.16"
optional = true

[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["write-integers", "write-floats"]
optional = true

[features]
default = ["heapless", "lexical-core"]
