[package]
name = "rusted-katana-progress-bars"
edition = "2021"

[dependencies]
ab_glyph = { workspace = true }
digital = { workspace = true }
heapless = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }

[lints]
workspace = true
