[package]
name = "gangs"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14.0", default-features = false, features = ["nightly", "inline-more"] }
rustc-hash = { version = "1.1.0", default-features = false }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
