[package]
name = "simple-frequency-sort"
edition = "2021"

[dependencies]
unchecked-std = { workspace = true }
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
radsort = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true
