[package]
name = "simple-substitution-cipher-helper"
version = "0.1.0"
edition = "2021"

[dependencies.my-prelude]
path = "../../my-prelude"

[dependencies.hashbrown]
version = "0.12.3"
default-features = false
features = ["nightly", "inline-more"]

[dependencies.rustc-hash]
version = "1.1.0"
default-features = false
