[package]
name = "tracking-sums-in-a-process"
edition = "2021"

[dependencies]
unchecked-std = "1.0.0"
vqsort-rs = "0.2.0"
radsort = { git = "https://github.com/JakubValtar/radsort" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_pcg = "0.3.1"

[lints]
workspace = true
