[package]
name = "tracking-sums-in-a-process"
edition = { workspace = true }

[dependencies]
radsort = { workspace = true }
unchecked-std = { workspace = true }
vqsort-rs = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true
