[package]
name = "unique-strings"
edition = "2021"

[dependencies]
num-bigint = { workspace = true }
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
char-to-lower = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true
