[package]
name = "unique-strings"
edition = { workspace = true }

[dependencies]
char-to-lower = { workspace = true }
hashbrown = { workspace = true }
num-bigint = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true
