[package]
name = "frequency-sequence"
version = "0.1.0"
edition = "2021"

[dependencies]
unchecked = { path = "../../unchecked" }
digital = { path = "../../digital" }
hashbrown = { version = "0.14.0", default-features = false, features = ["nightly", "inline-more"] }
rustc-hash = { version = "1.1.0", default-features = false }
