[package]
name = "sort-rectangles-and-circles-by-area-ii"
version = "0.1.0"
edition = "2021"

[dependencies]
either = { version = "1.8.0", default-features = false }
radsort = { git = "https://github.com/JakubValtar/radsort" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
