[package]
name = "sort-rectangles-and-circles-by-area-ii"
edition = "2021"

[dependencies]
either = "1.9.0"
radsort = { git = "https://github.com/JakubValtar/radsort" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_pcg = "0.3.1"

[lints]
workspace = true
