[package]
name = "unique-string-characters"
edition = "2021"

[dependencies]
unchecked-std = "1.0.0"
hashbrown = { version = "0.15.0", features = ["nightly"] }
rustc-hash = "2.0.0"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_pcg = "0.3.1"

[lints]
workspace = true
