[package]
name = "unique-string-characters"
edition = { workspace = true }

[dependencies]
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
unchecked-std = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }

[lints]
workspace = true
