[package]
name = "csv-representation-of-array"
version = "0.1.0"
edition = "2021"

[dependencies]
unchecked-core = { path = "../../unchecked-core" }
digital = { path = "../../digital" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_pcg = "0.3.1"
